--- a/apps/site/src/components/widgets/Team.astro
+++ b/apps/site/src/components/widgets/Team.astro
@@ -1,5 +1,5 @@
 ---
-import TeamCard from '@atoms/TeamCard';
+import TeamCard from '@common/TeamCard';
 import { Portfolio } from '@icons/card_button';
 
 export interface Props {
