--- a/apps/site/src/components/widgets/projects/ProjectCarousel.astro
+++ b/apps/site/src/components/widgets/projects/ProjectCarousel.astro
@@ -1,6 +1,6 @@
 ---
-import SimpleCarousel from '@atoms/SimpleCarousel';
-import type { CarouselProps } from '@atoms/SimpleCarousel';
+import SimpleCarousel from '@common/SimpleCarousel';
+import type { CarouselProps } from '@common/SimpleCarousel';
 
 export type ImageProps = {
 	src: string;
