--- a/apps/site/src/pages/terms.astro
+++ b/apps/site/src/pages/terms.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '@layouts/PoliciesPageLayout.astro';
 import { components } from '@widgets/policies/components/Components.astro';
-import Terms from '@collections/policies/terms.md';
+import TermsContent from '@content/policies/terms.md';
 ---
 
 <Layout>
-	<Terms components={components} />
+	<TermsContent components={components} />
 </Layout>
