--- a/apps/site/src/components/common/ButtonToggleMenu.astro
+++ b/apps/site/src/components/common/ButtonToggleMenu.astro
@@ -1,13 +1,15 @@
 ---
-import { Icon } from 'astro-icon';
+// import { Icon } from 'astro-icon'
 const {
-	label = 'Mostrar menu',
-	className = 'rounded-lg text-sm p-2.5 inline-flex items-center relative spacewiz__text',
-	iconClass = 'w-6 h-6',
-	iconName = 'tabler:menu',
-} = Astro.props;
+  label = 'Mostrar menu',
+  className = 'rounded-lg text-sm p-2.5 inline-flex items-center relative spacewiz__text',
+  iconClass = 'w-6 h-6',
+  iconName = 'tabler:menu'
+} = Astro.props
 ---
 
-<button type="button" class={className} aria-label={label} data-sw-btn-toggle-menu>
-	<Icon name={iconName} class={iconClass} optimize={false} />
+<button type='button' class={className} aria-label={label} data-sw-btn-toggle-menu>
+  icon
+  <!-- TODO -->
+  <!-- <Icon name={iconName} class={iconClass} optimize={false} /> -->
 </button>
