--- a/apps/site/src/components/widgets/Footer.astro
+++ b/apps/site/src/components/widgets/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { SiteIcon } from '@atoms/SiteIcon';
+import { SiteIcon } from '@common/SiteIcon';
 import { Icon } from 'astro-icon';
 ---
 
