--- a/apps/site/src/components/widgets/Products.astro
+++ b/apps/site/src/components/widgets/Products.astro
@@ -1,5 +1,5 @@
 ---
-import ProductCard from '@atoms/ProductCard';
+import ProductCard from '@common/ProductCard';
 
 export interface Props {
 	[props: string]: any;
