--- a/apps/site/src/pages/privacy.astro
+++ b/apps/site/src/pages/privacy.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '@layouts/PoliciesPageLayout.astro';
 import { components } from '@widgets/policies/components/Components.astro';
-import Privacy from '@collections/policies/privacy.md';
+import PrivacyContent from '@collections/policies/privacy.md';
 ---
 
 <Layout>
-	<Privacy components={components} />
+	<PrivacyContent components={components} />
 </Layout>
