--- a/apps/site/src/pages/projects/index.astro
+++ b/apps/site/src/pages/projects/index.astro
@@ -1,38 +1,39 @@
 ---
-import Layout from '@layouts/PageLayout.astro';
-import { getSlugFromURL } from '@core/Path';
+import Layout from '@layouts/PageLayout.astro'
+// import { getSlugFromURL } from '@common/Path'
 
-import { SITE } from '@config.js';
-import type { MetaSEO } from 'types/metaseo';
+// import { SITE } from '@config.js';
+// import type { MetaSEO } from 'types/metaseo';
 
-async function getProjects() {
-	const all = (await Astro.glob('/src/collections/projects/*.md'))
-		.filter((page) => !page.frontmatter.draft);
+// async function getProjects() {
+// 	const all = (await Astro.glob('/src/content/projects/*.md'))
+// 		.filter((page) => !page.frontmatter.draft);
 
-	return all
-		.sort((pageA, pageB) => {
-			const dateA = new Date(pageA.frontmatter.date).getTime();
-			const dateB = new Date(pageB.frontmatter.date).getTime();
-			return dateB - dateA;
-		})
-		.map(({ file, ...page }) => ({
-			slug: getSlugFromURL(file),
-			...page,
-		}));
-}
+// 	return all
+// 		.sort((pageA, pageB) => {
+// 			const dateA = new Date(pageA.frontmatter.date).getTime();
+// 			const dateB = new Date(pageB.frontmatter.date).getTime();
+// 			return dateB - dateA;
+// 		})
+// 		.map(({ file, ...page }) => ({
+// 			slug: getSlugFromURL(file),
+// 			...page,
+// 		}));
+// }
 
-const projects = await getProjects();
+// const projects = await getProjects();
 
-const meta: MetaSEO = {
-	title: 'Projetos - spacewiz.dev',
-	description: SITE.description,
-	canonical: Astro.url.toString(),
-	ogType: 'website',
-};
+// const meta: MetaSEO = {
+// 	title: 'Projetos - spacewiz.dev',
+// 	description: SITE.description,
+// 	canonical: Astro.url.toString(),
+// 	ogType: 'website',
+// };
 ---
 
-<Layout meta={meta}>
-	<h1 class="pt-4 text-4xl font-black uppercase">Projetos</h1>
+<Layout>
+  <!-- <Layout meta={meta}> -->
+  <!-- <h1 class="pt-4 text-4xl font-black uppercase">Projetos</h1>
 	<section class="my-8 grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-8 content-around">
 		{
 			projects.map((page) => (
@@ -66,5 +67,5 @@ const meta: MetaSEO = {
 				</div>
 			))
 		}
-	</section>
+	</section> -->
 </Layout>
