--- a/apps/site/src/components/common/Scripts.astro
+++ b/apps/site/src/components/common/Scripts.astro
@@ -3,43 +3,35 @@
 ---
 
 <script is:inline>
-  // O tema precisa ser lido e setado na primeira vez
-  // num script inline para não ter FOUC.
-
-  let startTheme = 'light'
-
-  const savedTheme = window.localStorage.getItem('theme')
-  if (savedTheme) {
-    startTheme = savedTheme
-  } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-    startTheme = 'dark'
-  }
-
-  if (startTheme === 'dark') document.documentElement.classList.add('dark')
-  else document.documentElement.classList.remove('dark')
-
-  window.localStorage.setItem('theme', startTheme)
+  document.documentElement.classList.toggle('dark', localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches))
+  // Whenever the user explicitly chooses light mode
+  localStorage.theme = 'light'
+  // Whenever the user explicitly chooses dark mode
+  localStorage.theme = 'dark'
+  console.log('localStorage.theme', localStorage.theme)
+  // Whenever the user explicitly chooses to respect the OS preference
+  localStorage.removeItem('theme')
 
   // TODO: Refatorar daqui pra baixo por React
-  function attachEvent(selector, event, fn) {
-    const matches = document.querySelectorAll(selector)
-    if (matches && matches.length) {
-      matches.forEach((elem) => {
-        elem.addEventListener(event, () => fn(elem), false)
-      })
-    }
-  }
+  // function attachEvent(selector, event, fn) {
+  //   const matches = document.querySelectorAll(selector)
+  //   if (matches && matches.length) {
+  //     matches.forEach((elem) => {
+  //       elem.addEventListener(event, () => fn(elem), false)
+  //     })
+  //   }
+  // }
 
-  window.onload = function () {
-    attachEvent('[data-sw-btn-toggle-menu]', 'click', function (elem) {
-      elem.classList.toggle('toggled')
-      document.getElementById('menu')?.classList.toggle('hidden')
-    })
-  }
+  // window.onload = function () {
+  //   attachEvent('[data-sw-btn-toggle-menu]', 'click', function (elem) {
+  //     elem.classList.toggle('toggled')
+  //     document.getElementById('menu')?.classList.toggle('hidden')
+  //   })
+  // }
 
-  window.onpageshow = function () {
-    const elem = document.querySelector('[data-sw-btn-toggle-menu]')
-    elem?.classList.remove('toggled')
-    document.getElementById('menu')?.classList.add('hidden')
-  }
+  // window.onpageshow = function () {
+  //   const elem = document.querySelector('[data-sw-btn-toggle-menu]')
+  //   elem?.classList.remove('toggled')
+  //   document.getElementById('menu')?.classList.add('hidden')
+  // }
 </script>
