--- a/apps/site/src/layouts/PageLayout.astro
+++ b/apps/site/src/layouts/PageLayout.astro
@@ -6,19 +6,24 @@ import DividerArrowDown from '@common/dividers/DividerArrowDown.astro';
 import type { MetaSEO } from 'types/metaseo';
 
 type Props = {
-	meta?: MetaSEO;
+    meta?: MetaSEO;
 };
 
 const { meta } = Astro.props as Props;
 ---
 
 <Layout meta={meta}>
-	<div class="min-h-screen spacewiz__container">
+    <div class='flex flex-row w-full min-h-screen items-center justify-center'>
+        <div class='flex flex-col w-full max-w-5xl'>
+            <slot />
+        </div>
+    </div>
+    <!-- <div class="min-h-screen spacewiz__container">
 		<div class="pb-8 min-h-screen bg-sw-secondary-700 dark:bg-sw-primary-700">
 			<main class="px-8">
 				<slot />
 			</main>
 		</div>
 	</div>
-	<DividerArrowDown class="fill-sw-secondary-700 dark:fill-sw-primary-700 bg-sw-coal-500" />
+	<DividerArrowDown class="fill-sw-secondary-700 dark:fill-sw-primary-700 bg-sw-coal-500" /> -->
 </Layout>
